Update swagger docs: WithdrawalStatus, WithdrawalKind
